# dataglasses

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yaml  quality_checks.yaml
src/dataglasses/: core.py
src/dataklasses/: __init__.py  core.py
tests/: test_dataklasses.py
